--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-echo "Hello from Atanu Barai!"
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>Hello from Atanu Barai</h1>
+
+</body>
+</html>
